@@ -3,6 +3,7 @@ Nicholas J Humfrey
 Uwe Koloska
 Jesse Chappell
 Topher Cyll
+Sze'kelyi Szabolcs
 
 Guidelines for authors:
 
